--- a/task001/index.html
+++ b/task001/index.html
@@ -146,7 +146,7 @@
                 <label for="email">请输入邮箱地址：
                     <input autofocus type="email" id="email" placeholder="这是一个文本输入框" />
                 </label>
-                <br> 邮箱地址请安要求格式输入
+                <br> 邮箱地址请按要求格式输入
             </p>
             <p>
                 <label for="pwd1">请输入密码：
@@ -159,16 +159,17 @@
             </p>
             <p>
                 性别：
-                <input type="radio" name="性别" value="男" id="man" checked> 男
-                <input type="radio" name="性别" value="女" id="woman"> 女 城市：
-                <select>
-                    <option value="北京">北京</option>
-                    <option value="广西">广西</option>
-                </select>
+                <input type="radio" name="性别" value="男" id="man" checked> 男</input>
+                <input type="radio" name="性别" value="女" id="woman"> 女</input>
+                城市：
+                <option selected="selected">北京</option>
+                <option>北京</option>
+                <option>重庆</option>
+                <option>广西</option>
                 爱好：
-                <input type="checkbox" name="爱好" value="运动">运动
-                <input type="checkbox" name="爱好" value="艺术">艺术
-                <input type="checkbox" name="爱好" value="科学">科学
+                <input type="checkbox" name="爱好" value="运动">运动</input>
+                <input type="checkbox" name="爱好" value="艺术">艺术</input>
+                <input type="checkbox" name="爱好" value="科学">科学</input>
                 个人描述：
                 <textarea name="个人描述" rows="2" placeholder="这是一个多行输入框，输入您的个人描述"></textarea>
                 <input type="submit" value="确认提交">
@@ -179,7 +180,8 @@
     <!-- 主体 end -->
     <!-- 版权 -->
     <footer>
-        <h3>版权所有&copy;</h3>
+        <p>版权所有&copy;</p>
+
     </footer>
     <!-- 版权end -->
 </body>
