--- a/task002/index.html
+++ b/task002/index.html
@@ -124,9 +124,8 @@
 <h1>网站一级标题，使用H1标签</h1>
 <ul>
 <!-- 在标签<a> 中使用了href属性来描述链接的地址 -->
-	<li><a href="https://ife.baidu.com/">百度前端学院</a></li>
-	<li><a href="https://www.w3cschool.cc/">w3cschool菜鸟教程</a></li>
-	<li><a href="https://www.zhihu.com/question/22689579">Web相关名词通俗解释</a></li>
+	<li><a href="https://WWW.baidu.com/">百度</a></li>
+
 </ul>
 </div>
 <div class="divbox content">
