--- a/task002/index.html
+++ b/task002/index.html
@@ -152,11 +152,11 @@
 	<div class="imgpreview">
 		<ul>
 			<li>
-				<p>图片1</p>
+				<p>好看的图片</p>
 				<img src="http://moefq.com/images/2016/03/21/82eb72cabaf4a1e18f2d46ca1d0616dc.md.jpg">
 			</li>
 			<li>
-				<p>好看的图片2</p>
+				<p>好看的图片</p>
 				<img src="http://moefq.com/images/2016/03/21/82eb72cabaf4a1e18f2d46ca1d0616dc.md.jpg">
 			</li>
 		</ul>
