Added files via upload

--- a/home/Home.html
+++ b/home/Home.html
@@ -31,13 +31,13 @@
         <li><a href="#">第二阶段</a></li>
         <li><a href="#">第三阶段</a></li>
         <li><a href="#">第四阶段</a></li>
-        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">More <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="https://github.com/ixiusama/baidu-front-end">Github</a></li>
+            <li><a href="#">攻壳前端</a></li>
+            <li><a href="http://htmlpreview.github.io/?https://github.com/ixiusama/baidu-front-end/blob/master/home/Home.html">About</a></li>
             <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="http://ife.baidu.com/">百度前端学院</a></li>
           </ul>
         </li>
       </ul>
@@ -66,7 +66,9 @@
     <hr>
   </div>
 <section>
-  <h1 class="col-md-5 col-md-offset-5">我们的Tema</h1>
+  <h1 class="col-md-5 col-md-offset-0">
+    <p><strong>我们的Tema</strong></p>
+  </h1>
   <div class="container">
     <div class="row">
       <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
@@ -87,7 +89,7 @@
 熟悉html、css，可做出简单静态页面；js知识过了几遍，但没有实际做过项目；了解html5、css3、jquery、bootstrap.</div>
         </div>
       </div>
-      <div class="col-lg-4 col-md-4 col-sm-6 hidden-sm hidden-xs">
+      <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
         <div class="media">
           <div class="media-left"> <a href="#"> <img src="img/ZTT.jpg" alt="placeholder image" width="100" height="100" class="media-object img-circle"></a></div>
           <div class="media-body">
@@ -95,25 +97,27 @@
 熟练掌握html,css。熟悉HTML5,css3,bookstrap。熟悉JavaScript, jquery,ajax。实习了3个月，感觉自己技术不咋的，想提升一下技术，然后找个好工作！</div>
         </div>
       </div>
-    </div>
-    <div class="row">
-<div class="media col-md-6">
-  <div class="media-left"> <a href="http://ixiusama.com/"> <img src="img/xiu.JPG" alt="placeholder image" width="100" height="100" class="media-object img-circle"></a></div>
-  <div class="media-body">
-    <h4 class="media-heading">胡修源</h4>
+      <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+        <div class="media">
+        <div class="media-left"> <a href="#"> <img src="img/MXY.jpg" alt="placeholder image" width="100" height="100" class="media-object img-circle"></a></div>
+        <div class="media-body">
+          <h4 class="media-heading">孙福浩</h4>
+          扎实的原生js</div>
+      </div>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+        <div class="media">
+          <div class="media-left"> <a href="#"> <img src="img/xiu.JPG" alt="placeholder image" width="105" height="100" class="media-object img-circle"></a></div>
+          <div class="media-body">
+            <h4 class="media-heading">胡修源</h4>
 略知一二，有自己的个人网站，想学到更多的知识。 我的邮箱是 xiu#xiusama.com(#麻烦转换为@)</div>
+        </div>
+      </div>
+    </div>
+    <div class="media"> </div>
 </div>
-<div class="media col-md-6">
-  <div class="media-left"> <a href="#"> <img src="img/MXY.jpg" alt="placeholder image" width="100" height="100" class="media-object img-circle"></a></div>
-  <div class="media-body">
-    <h4 class="media-heading">孙福浩</h4>
-    扎实的原生js</div>
-</div>
-</div>
-<div class="row"> </div>
     <div class="media">
       <div class="media-left"> <a href="#"> </a></div>
-</div>
 </div>
 </section>
 <hr>
@@ -125,7 +129,7 @@
           <div class="thumbnail"> <img src="img/first.jpg" alt="Thumbnail Image 1" class="img-responsive">
             <div class="caption">
               <h3>第一阶段</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <p>IFE春季班第一阶段任务</p>
               <hr>
               <p class="text-center"><a href="#" class="btn btn-success" role="button">For Sale</a></p>
             </div>
@@ -135,44 +139,42 @@
           <div class="thumbnail"> <img src="img/second.jpg" alt="Thumbnail Image 1" class="img-responsive">
             <div class="caption">
               <h3>第二阶段</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <p>IFE春季班第二阶段任务</p>
               <hr>
               <p class="text-center"><a href="#" class="btn btn-info" role="button">For Rent</a></p>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-6 hidden-sm hidden-xs">
+<div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
           <div class="thumbnail"> <img src="img/three.jpg" alt="Thumbnail Image 1" class="img-responsive">
             <div class="caption">
               <h3>第三阶段</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <p>IFE春季班第三阶段任务</p>
               <hr>
               <p class="text-center"><a href="#" class="btn btn-success" role="button">For Sale</a></p>
             </div>
           </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-4 col-sm-6 col-xs-6 col-md-4">
+        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
           <div class="thumbnail"> <img src="img/four.jpg" alt="Thumbnail Image 1" class="img-responsive">
             <div class="caption">
               <h3>第四阶段</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <p>IFE春季班最后阶段任务</p>
               <hr>
               <p class="text-center"><a href="#" class="btn btn-info" role="button">For Rent</a></p>
             </div>
           </div>
         </div>
 </div>
-    </div>
 </div>
+  </div>
 </div>
 <hr>
 <section>
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
-        <h3>New Properties</h3>
+        <h3>最新的完成任务</h3>
         <hr>
         <div class="row">
           <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
